==> ak-embedded-software/ak-base-kit-stm32l151/application/sources/networks/mbmaster-v2.9.6/demo/ATXMEGA/src/port/mbportserial.c <==
#include <asf.h>
#include <stdlib.h>
#include "mbport.h"
#include "common/mbtypes.h"
#include "common/mbportlayer.h"
#include "common/mbframe.h"
#include "common/mbutils.h"
#define IDX_INVALID				( 255 )
#define HDL_RESET( x ) do { \
	( x )->ubIdx = IDX_INVALID; \
	( x )->pbMBPTransmitterEmptyFN = NULL; \
	( x )->pvMBPReceiveFN = NULL; \
	( x )->xMBMHdl = MB_HDL_INVALID; \
} while( 0 );
#define HW_0_RXVECT		USARTC0_RXC_vect
#define HW_0_TXVECT		USARTC0_TXC_vect
#define HW_0_DREVECT	USARTC0_DRE_vect
#define HW_0_HDL_IDX	0

eMBErrorCode
eMBPSerialInit( xMBPSerialHandle * pxSerialHdl, UCHAR ucPort, ULONG ulBaudRate, UCHAR ucDataBits, eMBSerialParity eParity, UCHAR ucStopBits, xMBHandle xMBMHdl )
{
    eMBErrorCode    eStatus = MB_ENOERR;
    usart_rs232_options_t xSerialOptions;
    UBYTE           ubIdx;

    MBP_ENTER_CRITICAL_SECTION(  );
    if( !bIsInitalized )
    {
        for( ubIdx = 0; ubIdx < MB_UTILS_NARRSIZE( xSerialHdls ); ubIdx++ )
        {
            HDL_RESET( &xSerialHdls[ubIdx] );
        }
        bIsInitalized = TRUE;
    }

    if( NULL == pxSerialHdl )
    {
        eStatus = MB_EINVAL;
    }
    else
    {
        if( ( ucPort < MB_UTILS_NARRSIZE( xSerialHWHandle ) ) && ( xSerialHdls[ucPort].ubIdx == IDX_INVALID ) )
        {
            xSerialOptions.baudrate = ulBaudRate;
            xSerialOptions.charlength = ucDataBits;
            switch ( ucDataBits )
            {
            default:
            case 8:
                xSerialOptions.charlength = USART_CHSIZE_8BIT_gc;
                break;
            case 7:
                xSerialOptions.charlength = USART_CHSIZE_7BIT_gc;
                break;
            }
            switch ( eParity )
            {
            default:
            case MB_PAR_NONE:
                xSerialOptions.paritytype = USART_PMODE_DISABLED_gc;
                break;
            case MB_PAR_ODD:
                xSerialOptions.paritytype = USART_PMODE_ODD_gc;
                break;
            case MB_PAR_EVEN:
                xSerialOptions.paritytype = USART_PMODE_EVEN_gc;
                break;
            }
            switch ( ucStopBits )
            {
            default:
            case 1:
                xSerialOptions.stopbits = false;
                break;
            case 2:
                xSerialOptions.stopbits = true;
                break;
            }

            if( usart_init_rs232( xSerialHWHandle[ucPort].pxUSART, &xSerialOptions ) )
            {
                ioport_configure_pin( xSerialHWHandle[ucPort].xIOPortTX, IOPORT_DIR_OUTPUT | IOPORT_INIT_HIGH );
                ioport_configure_pin( xSerialHWHandle[ucPort].xIOPortRX, IOPORT_DIR_INPUT );
                ioport_configure_pin( xSerialHWHandle[ucPort].xIOPortRS485, IOPORT_DIR_OUTPUT | IOPORT_INIT_LOW );
                usart_tx_enable( xSerialHWHandle[ucPort].pxUSART );
                usart_rx_enable( xSerialHWHandle[ucPort].pxUSART );

                xSerialHdls[ucPort].pbMBPTransmitterEmptyFN = NULL;
                xSerialHdls[ucPort].pvMBPReceiveFN = NULL;
                xSerialHdls[ucPort].xMBMHdl = xMBMHdl;
                xSerialHdls[ucPort].ubIdx = ucPort;
                *pxSerialHdl = &xSerialHdls[ucPort];
            }
            else
            {
                eStatus = MB_EPORTERR;
            }
        }
        else
        {
            eStatus = MB_ENORES;
        }
    }
    MBP_EXIT_CRITICAL_SECTION(  );
    return eStatus;
}

eMBErrorCode
eMBPSerialClose( xMBPSerialHandle xSerialHdl )
{
    eMBErrorCode    eStatus = MB_EINVAL;
    xSerialHandle  *pxSerialIntHdl = xSerialHdl;

    MBP_ENTER_CRITICAL_SECTION(  );
    if( MB_IS_VALID_HDL( pxSerialIntHdl, xSerialHdls ) )
    {
        usart_set_rx_interrupt_level( xSerialHWHandle[pxSerialIntHdl->ubIdx].pxUSART, USART_INT_LVL_OFF );
        usart_set_tx_interrupt_level( xSerialHWHandle[pxSerialIntHdl->ubIdx].pxUSART, USART_INT_LVL_OFF );
        usart_set_dre_interrupt_level( xSerialHWHandle[pxSerialIntHdl->ubIdx].pxUSART, USART_INT_LVL_OFF );
        usart_tx_disable( xSerialHWHandle[pxSerialIntHdl->ubIdx].pxUSART );
        usart_rx_disable( xSerialHWHandle[pxSerialIntHdl->ubIdx].pxUSART );
		HDL_RESET( pxSerialIntHdl );
        eStatus = MB_ENOERR;
    }
    MBP_EXIT_CRITICAL_SECTION(  );
    return eStatus;
}

eMBErrorCode
eMBPSerialTxEnable( xMBPSerialHandle xSerialHdl, pbMBPSerialTransmitterEmptyCB pbMBPTransmitterEmptyFN )
{
    eMBErrorCode    eStatus = MB_EINVAL;
    xSerialHandle  *pxSerialIntHdl = xSerialHdl;

    MBP_ENTER_CRITICAL_SECTION(  );
    if( MB_IS_VALID_HDL( pxSerialIntHdl, xSerialHdls ) )
    {
        eStatus = MB_ENOERR;
        if( NULL != pbMBPTransmitterEmptyFN )
        {
            MBP_ASSERT( NULL == pxSerialIntHdl->pbMBPTransmitterEmptyFN );
            pxSerialIntHdl->pbMBPTransmitterEmptyFN = pbMBPTransmitterEmptyFN;
            usart_set_dre_interrupt_level( xSerialHWHandle[pxSerialIntHdl->ubIdx].pxUSART, USART_INT_LVL_LO );
        }
        else
        {
            pxSerialIntHdl->pbMBPTransmitterEmptyFN = NULL;
            usart_set_tx_interrupt_level( xSerialHWHandle[pxSerialIntHdl->ubIdx].pxUSART, USART_INT_LVL_LO );
        }
    }
    MBP_EXIT_CRITICAL_SECTION(  );
    return eStatus;
}

eMBErrorCode
eMBPSerialRxEnable( xMBPSerialHandle xSerialHdl, pvMBPSerialReceiverCB pvMBPReceiveFN )
{
    eMBErrorCode    eStatus = MB_EINVAL;
    xSerialHandle  *pxSerialIntHdl = xSerialHdl;

    MBP_ENTER_CRITICAL_SECTION(  );
    if( MB_IS_VALID_HDL( pxSerialIntHdl, xSerialHdls ) )
    {
        eStatus = MB_ENOERR;
        if( NULL != pvMBPReceiveFN )
        {
            MBP_ASSERT( NULL == pxSerialIntHdl->pvMBPReceiveFN );
            pxSerialIntHdl->pvMBPReceiveFN = pvMBPReceiveFN;
            ( void )xSerialHWHandle[pxSerialIntHdl->ubIdx].pxUSART->STATUS;
            ( void )xSerialHWHandle[pxSerialIntHdl->ubIdx].pxUSART->DATA;
            usart_set_rx_interrupt_level( xSerialHWHandle[pxSerialIntHdl->ubIdx].pxUSART, USART_INT_LVL_LO );
        }
        else
        {
            pxSerialIntHdl->pvMBPReceiveFN = NULL;
            usart_set_rx_interrupt_level( xSerialHWHandle[pxSerialIntHdl->ubIdx].pxUSART, USART_INT_LVL_OFF );
        }
    }
    MBP_EXIT_CRITICAL_SECTION(  );
    return eStatus;
}
